--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,48 +1,49 @@
 ﻿@inherits LayoutComponentBase
 @namespace TrustyPortfolio.Components.Layout
-<MudThemeProvider @ref="@mudThemeProvider" @bind-IsDarkMode="@IsDarkMode" Theme="MyCustomTheme"/>
+
+<MudThemeProvider @ref="@mudThemeProvider" @bind-IsDarkMode="@IsDarkMode" Theme="MyCustomTheme" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
 <MudContainer Class="page">
     <MudLayout>
         <MudAppBar Elevation="1">
-            <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-            <MudText Typo="Typo.h5" Class="ml-3">Trusty Portfolio</MudText>
-            <MudSpacer />
-            <AuthorizeView>
-                <Authorized>
-                    <form action="Account/Logout" method="post">
-                        <AntiforgeryToken />
-                        <input type="hidden" name="ReturnUrl" value="@currentUrl" />
-                        <button type="submit" class="nav-link">
-                            <MudButton Variant="Variant.Filled" Color="Color.Secondary">Logout</MudButton>
-                        </button>
-                    </form>
-                </Authorized>
-            </AuthorizeView>
-            <MudToggleIconButton @bind-Toggled="@IsDarkMode"
-                                 Icon="@Icons.Material.TwoTone.WbSunny" Style="@ToggledColor" Title="Off"
-                                 ToggledIcon="@Icons.Material.Filled.Nightlight" ToggledTitle="On" />
-            <AuthorizeView>
-                <Authorized>
-                    <MudAvatar>
-                        @if (User != null && !string.IsNullOrEmpty(User.ProfilePictureURL)) {
-                            <MudImage Src="@User.ProfilePictureURL"></MudImage>
-                        } else {
-                            <MudImage Src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg"></MudImage>
-                        }
-                    </MudAvatar>
-                </Authorized>
-                <NotAuthorized>
-                </NotAuthorized>
-            </AuthorizeView>
-
+            <div class="d-flex justify-content-center flex-grow-1">
+                <MudTabs Elevation="4" Rounded="true" Centered="true" Color="@Color.Primary" ActivePanelIndexChanged="Handle_ActivePanelIndexChanged">
+                    <MudTabPanel Text="Home" />
+                    <MudTabPanel Text="Blog" />
+                    <MudTabPanel Text="Projects" />
+                    <MudTabPanel Text="About" />
+                    <MudTabPanel Text="Resume" />
+                </MudTabs>
+            </div>
+            <div class="ml-auto">
+                <AuthorizeView>
+                    <Authorized>
+                        <form action="Account/Logout" method="post">
+                            <AntiforgeryToken />
+                            <input type="hidden" name="ReturnUrl" value="@currentUrl" />
+                            <button type="submit" class="nav-link">
+                                <MudButton Variant="Variant.Filled" Color="Color.Secondary">Logout</MudButton>
+                            </button>
+                        </form>
+                        <MudAvatar>
+                            @if (User != null && !string.IsNullOrEmpty(User.ProfilePictureURL)) {
+                                <MudImage Src="@User.ProfilePictureURL"></MudImage>
+                            } else {
+                                <MudImage Src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg"></MudImage>
+                            }
+                        </MudAvatar>
+                    </Authorized>
+                </AuthorizeView>
+                <!-- 
+                    <MudToggleIconButton @bind-Toggled="@IsDarkMode"
+                                     Icon="@Icons.Material.TwoTone.WbSunny" Style="@ToggledColor" Title="Off"
+                                     ToggledIcon="@Icons.Material.Filled.Nightlight" ToggledTitle="On" />
+                -->
+                </div>
         </MudAppBar>
-        <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
-            <NavMenu />
-        </MudDrawer>
-        <MudMainContent>    
+        <MudMainContent>
             <CascadingValue Value="PortfolioData">
                 @Body
             </CascadingValue>
