--- a/Components/Components/BlogCard.razor
+++ b/Components/Components/BlogCard.razor
@@ -5,7 +5,7 @@
         </CardHeaderContent>
     </MudCardHeader>
     <MudCardActions Style="position: absolute; bottom: 0; left: 0; right: 0; padding: 8px;">
-        <MudButton Href="@GetURLHandle()" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
+        <MudButton Href="@BlogPostUtil.GetURLHandle(BlogPost)" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
         <MudTooltip Text="@BlogPost.Description" Color="Color.Primary" Placement="Placement.Top">
             <MudIcon Icon="@Icons.Material.Outlined.Info" style="position: absolute; bottom: 8; right: 8;" />
         </MudTooltip>
