--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -8,6 +8,11 @@
 <MudContainer Class="page">
     <MudLayout>
         <MudAppBar Elevation="1">
+            <AuthorizeView>
+                <Authorized>
+                    <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+                </Authorized>
+            </AuthorizeView>
             <div class="d-flex justify-content-center flex-grow-1">
                 <MudTabs Elevation="4" Rounded="true" Centered="true" Color="@Color.Primary" ActivePanelIndexChanged="Handle_ActivePanelIndexChanged">
                     <MudTabPanel Text="Home" />
@@ -27,22 +32,17 @@
                                 <MudButton Variant="Variant.Filled" Color="Color.Secondary">Logout</MudButton>
                             </button>
                         </form>
-                        <MudAvatar>
-                            @if (User != null && !string.IsNullOrEmpty(User.ProfilePictureURL)) {
-                                <MudImage Src="@User.ProfilePictureURL"></MudImage>
-                            } else {
-                                <MudImage Src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg"></MudImage>
-                            }
-                        </MudAvatar>
                     </Authorized>
                 </AuthorizeView>
-                <!-- 
-                    <MudToggleIconButton @bind-Toggled="@IsDarkMode"
-                                     Icon="@Icons.Material.TwoTone.WbSunny" Style="@ToggledColor" Title="Off"
-                                     ToggledIcon="@Icons.Material.Filled.Nightlight" ToggledTitle="On" />
-                -->
                 </div>
         </MudAppBar>
+        <AuthorizeView>
+            <Authorized>
+                <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
+                    <NavMenu />
+                </MudDrawer>
+            </Authorized>
+        </AuthorizeView>
         <MudMainContent>
             <CascadingValue Value="PortfolioData">
                 @Body
