Change NavBar Color to match bg

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -14,7 +14,7 @@
                 </Authorized>
             </AuthorizeView>
             <div class="d-flex justify-content-center flex-grow-1">
-                <MudTabs Elevation="4" Rounded="true" Centered="true" Color="@Color.Primary" ActivePanelIndexChanged="Handle_ActivePanelIndexChanged">
+                <MudTabs Rounded="true" Centered="true" Color="@Color.Dark" ActivePanelIndexChanged="Handle_ActivePanelIndexChanged">
                     <MudTabPanel Text="Home" />
                     <MudTabPanel Text="Blog" />
                     <MudTabPanel Text="Projects" />
