--- a/Components/Components/BlogCard.razor
+++ b/Components/Components/BlogCard.razor
@@ -1,13 +1,11 @@
 ﻿<MudCard Elevation="5" Style="height: 200px; position: relative;">
     <MudCardHeader>
         <CardHeaderContent>
-            <MudText Typo="Typo.h6">@BlogPost.Title</MudText>
+            <MudText Typo="Typo.h6" Class="mb-4">@BlogPost.Title</MudText>
+            <MudText Typo="Typo.body2">@BlogPost.Description</MudText>
         </CardHeaderContent>
     </MudCardHeader>
     <MudCardActions Style="position: absolute; bottom: 0; left: 0; right: 0; padding: 8px;">
         <MudButton Href="@BlogPostUtil.GetURLHandle(BlogPost)" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
-        <MudTooltip Text="@BlogPost.Description" Color="Color.Primary" Placement="Placement.Top">
-            <MudIcon Icon="@Icons.Material.Outlined.Info" style="position: absolute; bottom: 8; right: 8;" />
-        </MudTooltip>
     </MudCardActions>
 </MudCard>
