--- a/Components/Components/ProjectCard.razor
+++ b/Components/Components/ProjectCard.razor
@@ -1,7 +1,8 @@
 ﻿<MudCard Elevation="5" Style="height: 200px; position: relative;">
     <MudCardHeader>
         <CardHeaderContent>
-            <MudText Typo="Typo.h6">@Project.Title</MudText>
+            <MudText Typo="Typo.h6" Class="mb-4">@Project.Title</MudText>
+            <MudText Typo="Typo.body2">@Project.Description</MudText>
         </CardHeaderContent>
         <CardHeaderActions>
             <MudLink Target="_blank" Href="@Project.ProjectUrl"><MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Default" /></MudLink>
@@ -9,8 +10,5 @@
     </MudCardHeader>
     <MudCardActions Style="position: absolute; bottom: 0; left: 0; right: 0; padding: 8px;">
         <MudButton Href="@GetURLHandle()" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
-        <MudTooltip Text="@Project.Description" Color="Color.Primary" Placement="Placement.Top">
-            <MudIcon Icon="@Icons.Material.Outlined.Info" style="position: absolute; bottom: 8; right: 8;" />
-        </MudTooltip>
     </MudCardActions>
 </MudCard>
