--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -9,8 +9,8 @@
 <div class="container col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-5 py-5">
         <div class="col-12 col-lg-6">
-            <MudText Typo="Typo.h3">Hi! My name is Ryan!</MudText>
             <MudContainer Class="mt-6">
+                <MudText Typo="Typo.h3" Class="mb-12">Hi! My name is Ryan!</MudText>
                 <MudText Typo="Typo.h6">I'm a Software Engineer!</MudText>
             </MudContainer>
         </div>
