--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -7,17 +7,17 @@
 @using TrustyPortfolio.Models.ViewModels
 
 <div class="container col-xxl-8 px-4 py-5">
-    <div class="row align-items-center g-5 py-5">
+    <div class="row g-5 py-5">
         <div class="col-12 col-lg-6">
             <MudContainer Class="mt-6">
-                <MudText Typo="Typo.h3" Class="mb-12">Hi! My name is Ryan!</MudText>
+                <MudText Style="@($"color:#FFFFFF;")" Typo="Typo.h3" Class="mb-12">Hi! My name is Ryan!</MudText>
                 <MudText Typo="Typo.h6">I'm a Software Engineer!</MudText>
             </MudContainer>
         </div>
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-6 d-flex justify-content-center">
             <img style="border-radius: 50%" src="https://res.cloudinary.com/djdtmbpce/image/upload/c_crop,g_auto,h_800,w_800/l8mrq0vrbuaugbw9vpbt.jpg"
                  alt="Profile Picture ;)"
-                 class="d-block mx-lg-auto img-fluid" width="300" />
+                 class="img-fluid" width="250" />
         </div>
     </div>
 </div>
