--- a/Components/Components/FeaturedBlogCard.razor
+++ b/Components/Components/FeaturedBlogCard.razor
@@ -1,12 +1,12 @@
 ﻿<MudCard Elevation="15" Style="height: 500px; position: relative;">
     <MudCardMedia Image="@BlogPost.FeaturedImageUrl" Height="300" />
     <MudCardContent>
-        <MudText Typo="Typo.h5">@BlogPost.Title</MudText>
+        <MudContainer Class="p-1">
+            <MudText Style="@($"color:#FFFFFF;")" Typo="Typo.h5" Class="mb-4">@BlogPost.Title</MudText>
+            <MudText Typo="Typo.body1">@BlogPost.Description</MudText>
+        </MudContainer>
     </MudCardContent>
     <MudCardActions Style="position: absolute; bottom: 0; left: 0; right: 0; padding: 8px;">
         <MudButton Href="@BlogPostUtil.GetURLHandle(BlogPost)" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
-        <MudTooltip Text="@BlogPost.Description" Color="Color.Primary" Placement="Placement.Top">
-            <MudIcon Icon="@Icons.Material.Outlined.Info" style="position: absolute; bottom: 8; right: 8;" />
-        </MudTooltip>
     </MudCardActions>
 </MudCard>
