Remove lightmode, for now

--- a/Components/Pages/Base/Resume.razor
+++ b/Components/Pages/Base/Resume.razor
@@ -2,11 +2,11 @@
 
 <MudContainer Class="container my-5">
     <MudContainer>
-        <div class="d-flex mb-3 justify-content-end">
+        <MudContainer class="d-flex mb-3 justify-content-end">
             <div class="align-content-center">
                 <a href="https://onedrive.live.com/embed?resid=324C3E78566D9F53%2153482&authkey=!ALAoi0ma60Poiag&em=2" class="btn btn-primary">Download</a>
             </div>
-        </div>
+        </MudContainer>
     </MudContainer>
     <div class="d-flex justify-content-center">
         <div class="col-12 d-flex justify-content-center">
@@ -16,12 +16,23 @@
                         <div class="col-md-8">
                             <header class="mb-5 text-center">
                                 <h1>Ryan Flores</h1>
-                                <p class="lead">Software Developer</p>
+                                <p class="lead">Software Engineer</p>
                                 <ul class="list-unstyled">
-                                    <li><i class="bi bi-telephone"></i> <a href="tel:9097248880">909-724-8880</a></li>
-                                    <li><i class="bi bi-envelope-at"></i> <a href="mailto:rryanflorres@gmail.com">rryanflorres@gmail.com</a></li>
-                                    <li><i class="bi bi-linkedin"></i> <a href="https://www.linkedin.com/in/ryan-flores-tt">LinkedIn</a></li>
-                                    <li><i class="bi bi-github"></i> <a href="https://github.com/RyanFloresTT">GitHub</a></li>
+                                    <li>
+                                        <div>
+                                            <a href="mailto:rryanflorres@gmail.com"><MudIcon Class="mx-2" Icon="@Icons.Material.Filled.Email" Title="LinkedIn" />rryanflorres@gmail.com</a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <a href="https://www.linkedin.com/in/ryan-flores-tt"><MudIcon Class="mx-2" Icon="@Icons.Custom.Brands.LinkedIn" Title="LinkedIn" />LinkedIn</a>
+                                        </div>
+                                    </li>
+                                    <li> 
+                                        <div>
+                                            <a href="https://github.com/RyanFloresTT"><MudIcon Class="mx-2" Icon="@Icons.Custom.Brands.GitHub" Title="GitHub" />GitHub</a>
+                                        </div>
+                                    </li>
                                 </ul>
                             </header>
 
