Change Resume page into Contact Me

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -20,7 +20,7 @@
                         <MudTabPanel Text="Blog" />
                         <MudTabPanel Text="Projects" />
                         <MudTabPanel Text="About" />
-                        <MudTabPanel Text="Resume" />
+                        <MudTabPanel Text="Contact" />
                     </MudTabs>
                 </div>
                 <div class="d-block d-md-none">
