--- a/Components/Pages/Base/Contact.razor
+++ b/Components/Pages/Base/Contact.razor
@@ -27,14 +27,10 @@
                     <MudListItem Text="X" Icon="@Icons.Custom.Brands.X" />
                 </MudLink>
                 <MudDivider DividerType="DividerType.Inset" />
-                <MudLink Href="@GetYouTubeURL()">
+                <MudLink Href="">
                     <MudListItem Text="YouTube" Icon="@Icons.Custom.Brands.YouTube" />
                 </MudLink >
             </MudList>
         </MudPaper>
     </MudContainer>
 </MudContainer>
-
-@code{
-    string GetYouTubeURL() => $"https://www.youtube.com/@trustytea3136";
-}
