--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -19,6 +19,30 @@
                  alt="Profile Picture ;)"
                  class="img-fluid" width="250" />
         </div>
+        <div class="col-12 d-flex justify-content-center">
+            <MudContainer Style="display: flex;justify-content: center;align-items: center;">
+                <MudLink Class="mx-4" Href="https://www.linkedin.com/in/ryan-flores-tt" Target="_blank">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Custom.Brands.LinkedIn" />
+                </MudLink>
+                <MudLink Class="mx-4" Href="https://github.com/RyanFloresTT" Target="_blank">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Custom.Brands.GitHub" />
+                </MudLink>
+                <MudLink Class="mx-4" Href="https://x.com/_TrustyTea" Target="_blank">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Custom.Brands.X" />
+                </MudLink>
+                <MudLink Class="mx-4" Href="@GetYouTubeURL()" Target="_blank">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Custom.Brands.YouTube" />
+                </MudLink>
+                <MudLink Class="mx-4" Href="mailto:rryanflorres@gmail.com" Target="_blank">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Email" />
+                </MudLink>
+            </MudContainer>
+        </div>
+        <div class="col-12 d-flex justify-content-center">
+            <MudContainer Style="display: flex;justify-content: center;align-items: center;">
+                <MudButton StartIcon="@Icons.Material.Filled.ContactPage" EndIcon="@Icons.Material.Filled.ArrowDownward" Variant="Variant.Filled" Color="Color.Primary" Href="https://www.dropbox.com/scl/fi/16788xets5zfv0z6q5a1a/Ryan-Flores-Software-Engineer.pdf?rlkey=8sdt7t5vk4g59lqj82in7d8mm&st=wxxa4isl&dl=1" Target="_blank">Download Resume</MudButton>
+            </MudContainer>
+        </div>
     </div>
 </div>
 
