Order Home Page Projects by Descending Date

--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -50,7 +50,7 @@
     @if (!PortfolioData.FeaturedProjects.Any() && !PortfolioData.Projects.Any()) {
         <MudProgressCircular Color="Color.Primary" Style="height:35%;width:35%;" Indeterminate="true" />
     } else {
-        @foreach (var project in PortfolioData.FeaturedProjects) {
+        @foreach (var project in PortfolioData.FeaturedProjects.OrderByDescending(x => x.PublishDate)) {
             <MudItem lg="4" md="6" sm="12" Class="p-4">
                 <FeaturedProjectCard Project="project" />
             </MudItem>
