--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -10,6 +10,9 @@
         <MudAppBar Elevation="1">
             <AuthorizeView>
                 <Authorized>
+                    <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
+                        <NavMenu />
+                    </MudDrawer>
                     <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
                 </Authorized>
             </AuthorizeView>
