--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -40,7 +40,7 @@
         </div>
         <div class="col-12 d-flex justify-content-center">
             <MudContainer Style="display: flex;justify-content: center;align-items: center;">
-                <MudButton StartIcon="@Icons.Material.Filled.ContactPage" EndIcon="@Icons.Material.Filled.ArrowDownward" Variant="Variant.Filled" Color="Color.Primary" Href="https://www.dropbox.com/scl/fi/16788xets5zfv0z6q5a1a/Ryan-Flores-Software-Engineer.pdf?rlkey=8sdt7t5vk4g59lqj82in7d8mm&st=wxxa4isl&dl=1" Target="_blank">Download Resume</MudButton>
+                <MudButton StartIcon="@Icons.Material.Filled.ContactPage" EndIcon="@Icons.Material.Filled.ArrowDownward" Variant="Variant.Filled" Color="Color.Primary" Href="https://www.dropbox.com/scl/fi/16788xets5zfv0z6q5a1a/Ryan-Flores-Software-Engineer.pdf?rlkey=8sdt7t5vk4g59lqj82in7d8mm&st=mgmwmy0w&dl=1" Target="_blank">Download Resume</MudButton>
             </MudContainer>
         </div>
     </div>
